--- a/app/assets/javascripts/anti-spam.js.erb
+++ b/app/assets/javascripts/anti-spam.js.erb
@@ -3,19 +3,20 @@
 	var antiSpamizeForms = function(){
 		var forms = document.querySelectorAll("form");
 		for(var i = 0, max = forms.length; i < max; i++){
-			var form = forms[i];
-			form.onsubmit = function(){
-				if(form.querySelectorAll('input.antispam_token').length == 0){
-					var input = document.createElement('input');
-				    input.type = 'hidden';
-				    input.name = 'antispam_token';
-				    input.className = 'antispam_token'
-				    input.value = '<%= AntiSpam.token %>';
-				    form.appendChild(input);
-				    form.submit();
-				    return false;
+			(function(form){
+				form.onsubmit = function(){
+					if(form.querySelectorAll('input.antispam_token').length == 0){
+						var input = document.createElement('input');
+					    input.type = 'hidden';
+					    input.name = 'antispam_token';
+					    input.className = 'antispam_token'
+					    input.value = '<%= AntiSpam.token %>';
+					    form.appendChild(input);
+					    form.submit();
+					    return false;
+					}
 				}
-			}
+			})(forms[i]);
 		}
 	}
 	
